# Klondike

./: .gitignore  class_diagram.xmi
diagrams/: class_diagram.xmi
src/: CMakeLists.txt  Klondike.cpp  Klondike.hpp  cppcheck.cmake  klondike.conf  klondikeConf.txt  main.cpp  ranking.txt
src/configuration/: ControllerType.hpp  DeckType.cpp  DeckType.hpp  KlondikeConfiguration.cpp  KlondikeConfiguration.hpp  PermanentMediumType.hpp  SaveType.hpp  ViewType.hpp
src/controllers/: AutomaticGameController.cpp  AutomaticGameController.hpp  CardCommand.cpp  CardCommand.hpp  CardTableController.cpp  CardTableController.hpp  Command.hpp  CommandManager.cpp  CommandManager.hpp  CommandType.hpp  CommandVisitor.hpp  ContinueController.cpp  ContinueController.hpp  Controller.cpp  Controller.hpp  DrawCardCommand.cpp  DrawCardCommand.hpp  FacadeCard.cpp  FacadeCard.hpp  GameController.cpp  GameController.hpp  GameControllerPrototyper.cpp  GameControllerPrototyper.hpp  GameControllerVisitor.hpp  LeaveCommand.cpp  LeaveCommand.hpp  LoadController.cpp  LoadController.hpp  Logic.cpp  Logic.hpp  ManualGameController.cpp  ManualGameController.hpp  ModifyHistoryCommand.cpp  ModifyHistoryCommand.hpp  MoveCommand.cpp  MoveCommand.hpp  MoveController.cpp  MoveController.hpp  MovementHistory.cpp  MovementHistory.hpp  (+8 more)
src/controllers/commands/: CardCommand.cpp  CardCommand.hpp  CardCommandDiscriminator.cpp  CardCommandDiscriminator.hpp  CardCommandVisitor.hpp  Command.cpp  Command.hpp  CommandPrototyper.cpp  CommandPrototyper.hpp  CommandType.hpp  CommandVisitor.hpp  DrawCardCommand.cpp  DrawCardCommand.hpp  LeaveCommand.cpp  LeaveCommand.hpp  ModifyHistoryCommand.cpp  ModifyHistoryCommand.hpp  MoveCommand.cpp  MoveCommand.hpp  MovementHistory.cpp  MovementHistory.hpp  SaveCommand.cpp  SaveCommand.hpp  ValidationCommand.cpp  ValidationCommand.hpp
src/controllers/local/: Command.cpp  Command.hpp  CommandManager.cpp  CommandManager.hpp  CommandType.hpp  CommandVisitor.hpp  DrawCardCommand.hpp  LeaveCommand.hpp  LocalCardTableController.cpp  LocalCardTableController.hpp  LocalContinueController.cpp  LocalContinueController.hpp  LocalController.cpp  LocalController.hpp  LocalGameController.cpp  LocalGameController.hpp  LocalMoveController.cpp  LocalMoveController.hpp  LocalOperationController.cpp  LocalOperationController.hpp  LocalStartController.cpp  LocalStartController.hpp  Logic.cpp  Logic.hpp  MoveCommand.cpp  MoveCommand.hpp  Movement.cpp  Movement.hpp  MovementHistory.cpp  MovementHistory.hpp  MovementOriginDestinationType.hpp
src/models/: Card.cpp  Card.hpp  CardTable.cpp  CardTable.hpp  Deck.cpp  Deck.hpp  DeckBuilder.cpp  DeckBuilder.hpp  DeckManager.cpp  DeckManager.hpp  DeckPrototyper.cpp  DeckPrototyper.hpp  DeckType.cpp  DeckType.hpp  Foundation.cpp  Foundation.hpp  FrenchDeck.cpp  FrenchDeck.hpp  Game.cpp  Game.hpp  Movement.cpp  Movement.hpp  MovementDestination.hpp  MovementHistory.cpp  MovementHistory.hpp  MovementOriginDestinationType.hpp  Pile.cpp  Pile.hpp  PileType.hpp  Ranking.cpp  Ranking.hpp  Score.cpp  Score.hpp  SpanishCard.cpp  SpanishCard.hpp  SpanishDeck.cpp  SpanishDeck.hpp  State.hpp  Suit.cpp  Suit.hpp  (+2 more)
src/utils/: Card.cpp  Card.hpp  ClosedInterval.cpp  ClosedInterval.hpp  CommandReader.cpp  CommandReader.hpp  FileReader.cpp  FileReader.hpp  IO.cpp  IO.hpp  LimitedIntDialog.cpp  LimitedIntDialog.hpp  NumericTextMenu.cpp  NumericTextMenu.hpp  PermanentMedium.hpp  PermanentMediumPrototyper.cpp  PermanentMediumPrototyper.hpp  PermanentMediumReader.hpp  PermanentMediumReaderPrototyper.cpp  PermanentMediumReaderPrototyper.hpp  PermanentMediumType.hpp  PermanentMediumWriter.hpp  PlainTextFileReader.cpp  PlainTextFileReader.hpp  PlainTextFileWriter.cpp  PlainTextFileWriter.hpp  TextFileReader.cpp  TextFileReader.hpp  TextFileWriter.cpp  TextFileWriter.hpp  TextMenu.cpp  TextMenu.hpp  YesNoDialog.cpp  YesNoDialog.hpp
src/views/: CardTableView.hpp  CardView.hpp  ContinueView.hpp  GameView.hpp  KlondikeView.cpp  KlondikeView.hpp  LoadView.hpp  MoveView.hpp  SaveView.hpp  StartView.hpp  ViewManager.cpp  ViewManager.hpp  ViewPrototyper.cpp  ViewPrototyper.hpp
src/views/text/: CardTableTextView.cpp  CardTableTextView.hpp  CardTextView.cpp  CardTextView.hpp  CardTextViewBuilder.cpp  CardTextViewBuilder.hpp  CardTextViewManager.cpp  CardTextViewManager.hpp  CardTextViewPrototyper.cpp  CardTextViewPrototyper.hpp  CommandInterpreter.cpp  CommandInterpreter.hpp  CommandTextMenu.cpp  CommandTextMenu.hpp  ContinueTextView.cpp  ContinueTextView.hpp  FrenchCardTextView.cpp  FrenchCardTextView.hpp  GameTextView.cpp  GameTextView.hpp  KlondikeTextView.cpp  KlondikeTextView.hpp  LoadTextView.cpp  LoadTextView.hpp  MoveTextView.cpp  MoveTextView.hpp  SaveTextView.cpp  SaveTextView.hpp  SpanishCardTextView.cpp  SpanishCardTextView.hpp  StartTextView.cpp  StartTextView.hpp
test/: CMakeLists.txt  CardTableTests.cpp  CardTests.cpp  ClosedIntervalTests.cpp  DeckTests.cpp  FoundationTests.cpp  GameTests.cpp  ScoreTests.cpp  SuitTests.cpp  TableauTests.cpp  compileAndExecuteUnitTest.sh
test/movements/: frenchDeck  frenchDeckLoad  frenchDeckTwoGamesInRow  frenchDeckUndo  frenchDeckUndoRedo  spanishDeck  spanishDeckLoad1  spanishDeckLoad2  spanishDeckTwoGamesInRow
